fix: spacing variablee name correction in delicious theme

--- a/themes/Delicious/foundation/spacing.scss
+++ b/themes/Delicious/foundation/spacing.scss
@@ -1,9 +1,9 @@
 $unit: 4px;
 
 $spacing-data: (
-  tight: rem($unit),
+  tightest: rem($unit),
   tighter: rem($unit * 2),
-  tightest: rem($unit * 3),
+  tight: rem($unit * 3),
   base: rem($unit * 4),
   loose: rem($unit * 5),
   loosest: rem($unit * 8)
